--- a/public/styles/components/_navbar.scss
+++ b/public/styles/components/_navbar.scss
@@ -1,5 +1,6 @@
 .navbar {
 	background-color: $light-background;
+	z-index: 1;
 	ul {
 		display: flex;
 		justify-content: space-between;
