--- a/public/styles/themes/_defaultTheme.scss
+++ b/public/styles/themes/_defaultTheme.scss
@@ -9,6 +9,7 @@ $clr-white: #fff;
 $clr-black: #222;
 $font-dark: #2d3436;
 $transparent-dark: #00000033;
+$transparent-darker: #00000066;
 $font-light: $light-background;
 $clr-red-dark: hsl(360, 67%, 44%);
 $clr-red-light: hsl(360, 71%, 66%);
